Create html container.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
         </form>
         <div id="error"></div> 
         <div id="table"></div>
+
+        <!-- Syntax sheet -->
+        <div>
+            <h2>Syntax sheet</h2>
+            <table class="syntax-sheet">
+            </table>
+        </div>
+
         <script type="text/javascript" src="FormulaError.js"></script>
         <script type="text/javascript" src="Formula.js"></script>
         <script type="text/javascript" src="FormulaSymbol.js"></script>
